added indices, insert and select commands